--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,15 @@
                     <ul class="section_list">
                     <li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/banking_app_interface_concept.jpg" alt="banking_app_interface_concept" width="360">
+                                    <div class="section_items_img">
+                                        <img src="./images_1/banking_app_interface_concept.jpg" alt="banking_app_interface_concept" width="360">
+                                        <div class="overlay">
+                                            <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                            Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                            Cloud Storage App
+                                        </p>
+                                        </div>
+                                    </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Banking App Interface Concept</h2>
                                 <p class="section_items_text">App</p>
@@ -58,76 +66,141 @@
                     </li>
                     <li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/cashless_payment.jpg" alt="cashless_payment" width="360">
-                            <div class="section_items_title_text">
-                                <h2 class="section_items_title">Cashless Payment</h2>
-                                <p class="section_items_text">Marketing lo</p>
+                            <div class="section_items_img">
+                                <img src="./images_1/cashless_payment.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                             </div>
-                        </a>
-                    </li>
-                    <li class="section_items">
-                        <a class="section_items_link" href="#">
-                            <img src="./images_1/meditaion_app.jpg" alt="meditaion_app" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Cashless Payment</h2>
                                 <p class="section_items_text">Marketing</p>
                             </div>
                         </a>
-                    </li>
-                    <li class="section_items">
+                    </li><li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/taxi_service.jpg" alt="taxi_service" width="360">
+                            <div class="section_items_img">
+                                <img src="./images_1/meditaion_app.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="section_items_title_text">
+                                <h2 class="section_items_title">Meditation App</h2>
+                                <p class="section_items_text">App</p>
+                            </div>
+                        </a>
+                    </li><li class="section_items">
+                        <a class="section_items_link" href="#">
+                            <div class="section_items_img">
+                                <img src="./images_1/taxi_service.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Taxi Service</h2>
                                 <p class="section_items_text">Marketing</p>
                             </div>
                         </a>
-                    </li>
-                    <li class="section_items">
+                    </li><li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/screen_illustrations.jpg" alt="screen_illustrations" width="360">
+                            <div class="section_items_img">
+                                <img src="./images_1/screen_illustrations.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Screen Illustrations</h2>
                                 <p class="section_items_text">Design</p>
                             </div>
                         </a>
-                    </li>
-                    <li class="section_items">
+                    </li><li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/online_courses.jpg" alt="online_courses" width="360">
+                            <div class="section_items_img">
+                                <img src="./images_1/online_courses.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Online Courses</h2>
                                 <p class="section_items_text">Marketing</p>
                             </div>
                         </a>
-                    </li>
-                    <li class="section_items">
+                    </li><li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/instagram_stories_concept.jpg" alt="instagram_stories_concept" width="360">
+                            <div class="section_items_img">
+                                <img src="./images_1/instagram_stories_concept.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Instagram Stories Concept</h2>
                                 <p class="section_items_text">Design</p>
                             </div>
                         </a>
-                    </li>
-                    <li class="section_items">
+                    </li><li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/organic_food.jpg" alt="organic_food" width="360">
+                            <div class="section_items_img">
+                                <img src="./images_1/organic_food.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Organic Food</h2>
                                 <p class="section_items_text">Web Site</p>
                             </div>
                         </a>
-                    </li>
-                    <li class="section_items">
+                    </li><li class="section_items">
                         <a class="section_items_link" href="#">
-                            <img src="./images_1/fresh_coffee.jpg" alt="fresh_coffee" width="360">
+                            <div class="section_items_img">
+                                <img src="./images_1/fresh_coffee.jpg" alt="banking_app_interface_concept" width="360">
+                                <div class="overlay">
+                                    <p class="section_items_img_block_text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                        App ·
+                                        Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Fresh Coffee</h2>
                                 <p class="section_items_text">Web Site</p>
                             </div>
                         </a>
-                    </li> 
+                    </li>
                 </ul>
             </div>
         </section>
